updated ReadUser func to read from DB. updated swagger docs
