# internal/handlers/read_user.go
@@ -1,9 +1,28 @@
 package handlers
 
 import (
+	"context"
+	"encoding/json"
 	"log/slog"
 	"net/http"
+	"strconv"
+
+	"github.com/adunnCT/blog/internal/models"
 )
+
+// userReader represents a type capable of reading a user from storage and
+// returning it or an error.
+type userReader interface {
+	Read(ctx context.Context, id uint64) (models.User, error)
+}
+
+// response represents the response for reading a user.
+type response struct {
+	ID       uint   `json:"id"`
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
 
 //	@Summary		Read User
 //	@Description	Read User by ID
@@ -11,29 +30,60 @@ import (
 //	@Accept			json
 //	@Produce		json
 //	@Param			id	path		string	true	"User ID"
-//	@Success		200	{object}	uint
+//	@Success		200	{object}	response
 //	@Failure		400	{object}	string
 //	@Failure		404	{object}	string
 //	@Failure		500	{object}	string
 //	@Router			/users/{id}  [GET]
-func HandleRead(logger *slog.Logger) http.Handler {
+func HandleRead(logger *slog.Logger, userReader userReader) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		// Set the status code to 200 OK
-		w.WriteHeader(http.StatusOK)
+		ctx := r.Context()
 
-		id := r.PathValue("id")
+		// Read id from path params
+		idStr := r.PathValue("id")
 
-		if id == "" {
-			http.Error(w, "not found", http.StatusNotFound)
+		// Convert the ID from string to int
+		id, err := strconv.Atoi(idStr)
+		if err != nil {
+			logger.ErrorContext(
+				ctx,
+				"failed to parse id from url",
+				slog.String("id", idStr),
+				slog.String("error", err.Error()),
+			)
+
+			http.Error(w, "Invalid ID", http.StatusBadRequest)
 			return
 		}
 
-		// Write the response body, simply echo the ID back out
-		_, err := w.Write([]byte(id))
+		// Read the user
+		user, err := userReader.Read(ctx, uint64(id))
 		if err != nil {
-			// Handle error if response writing fails
-			logger.ErrorContext(r.Context(), "failed to write response", slog.String("error", err.Error()))
+			logger.ErrorContext(ctx, "failed to read user", slog.String("error", err.Error()))
 			http.Error(w, "Internal Server Error", http.StatusInternalServerError)
+			return
+		}
+
+		// Convert our models.User domain model into a response model.
+		response := response{
+			ID:       user.ID,
+			Name:     user.Name,
+			Email:    user.Email,
+			Password: user.Password,
+		}
+
+		// Encode the response model as JSON
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(http.StatusOK)
+		if err := json.NewEncoder(w).Encode(response); err != nil {
+			logger.ErrorContext(
+				ctx,
+				"failed to encode response",
+				slog.String("error", err.Error()),
+			)
+
+			http.Error(w, "Internal Server Error", http.StatusInternalServerError)
+			return
 		}
 	})
 }
